# light-rpc

./: .clang-format  CMakeLists.txt  Makefile  readme.md
inc/: fast_channel.h  fast_define.h  fast_log.h  fast_resource.h  fast_server.h  fast_shared.h  fast_unique.h  fast_utils.h  fast_verbs.h  light_channel.h  light_control.h  light_def.h  light_global.h  light_log.h  light_server.h
proto/: fast_impl.proto  light_impl.pb.cc  light_impl.pb.h  light_impl.proto
src/: light_api.cc  light_api.h  light_channel.cc  light_channel.h  light_common.cc  light_common.h  light_controller.h  light_global.cc  light_log.h  light_protocol.h  light_server.cc  light_server.h
src-common/: fast_define.cc  fast_utils.cc  fast_verbs.cc
src-endpoint/: fast_channel.cc  fast_server.cc
src-resource/: fast_resource.cc  fast_shared.cc  fast_unique.cc
test/: basic.cc  client.cc  echo.pb.cc  echo.pb.h  echo.proto  mpi_test.cc  server.cc  sym_test.cc  test.proto  util.h  utils.h
test/proto/: test.proto
